# ErgativeAgents

./: .gitignore  LICENSE  README.md  advanced_analyzer.py  advanced_viewer.py  advancedprompt.yaml  basque.py  basquemodel.py  constraints.txt  cross_linguistic_interpreter.py  debate.py  english.py  generate_report.py  ig_coding.py  llm_analyzer.py  morphological_analyzer.py  nlp_analyzer.py  parsing_pipeline.py  pyproject.toml  requirements.txt  responsibility_analyzer.py  simplified_viewer.py  simplified_viewer.py.bak  simplified_viewer_fixed.py  syntactic_analyzer.py  utils.py
advanced_analysis_results/: basque_advanced_analysis_20250512_165221.md  bilingual_bilingual_analysis_20250512_165819.md  bilingual_normative_proposal_analysis_20250512_165421.md  bilingual_responsibility_analysis_20250512_165623.md  english_advanced_analysis_20250512_165146.md
analysis_results/: basque_advanced_analysis_basque_20250510_144449_20250511_101004.md  basque_advanced_analysis_basque_20250510_144449_20251102_071016.md  basque_advanced_analysis_basque_20250512_102720_20250512_103657.md  basque_advanced_analysis_basque_20250512_105546_20250512_105916.md  basque_advanced_analysis_basque_20251120_121009_20251120_122446.md  basque_advanced_analysis_basque_20251120_121009_20251120_143510.md  basque_advanced_analysis_basque_20251211_160417_20251211_164119.md  basque_llm_analysis_basque_20250510_144449_20250510_155254.json  basque_llm_analysis_basque_20250510_144449_20250510_160418.json  basque_llm_analysis_basque_20250510_144449_20250511_091448.json  (+89 more)
archived_scripts/: test_streamlit.py  (+1 more)
(+60 files in other folders)
