[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agency-analyzer"
version = "0.1.0"
description = "A tool for analyzing agency and cultural patterns in AI-generated text"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "openai>=1.0.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.21.0",
    "httpx>=0.24.0",
    "plotly>=5.13.0",
    "dash>=2.9.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "umap-learn>=0.5.0",
    "dash-bootstrap-components>=1.0.0",
    "dash-html-components>=2.0.0",
    "dash-core-components>=2.0.0",
    "dash-table>=5.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/agency_analyzer"] 